# Spider_Bot

./: .gitignore  README.md
a_code/: a_code.ino
a_code/sketch_sep7a/: sketch_sep7a.ino  spider.h
a_code/spi_try/: spi_try.ino  spider_types.h
a_code/spider/: spider.h  spider.ino  spider_types.h
esp-to-arduino-peripheral/: CMakeLists.txt
esp-to-arduino-peripheral/main/: main.c
spider-bot/: CMakeLists.txt
spider-bot/components/spider_server/: CMakeLists.txt  README.md  partitions.csv  spider_server.c  spider_server.h
spider-bot/components/spider_server/website/: spiderbot.html
spider-bot/main/: main.c
spider-bot/spider server/: CMakeLists.txt  partitions.csv
spider-bot/spider server/main/: CMakeLists.txt  main.c
spider-bot/spider server/website/: spiderbot.html
